add js file, make navbar sticky, fix responsiveness

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: raleway, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -59,10 +60,13 @@ span.john {
 nav {
   display: flex;
   background: #252932;
-  flex-direction: column;
-  justify-content: center;
-  height: 45px;
-  position: relative;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  box-shadow: 0px 1px 5px #252932;
 }
 nav ul {
   display: flex;
@@ -75,7 +79,7 @@ nav li {
 }
 
 .gradient {
-  animation: gradientMove 20s ease infinite;
+  animation: gradientMove 10s ease infinite;
   background: linear-gradient(
     50deg,
     #f7a344,
@@ -83,7 +87,7 @@ nav li {
     rgb(5, 194, 201),
     rgb(5, 194, 201)
   );
-  background-size: 250%;
+  background-size: 300%;
   width: 100vw;
   height: 3px;
   opacity: 0.7;
@@ -147,10 +151,18 @@ nav li {
     font-size: 14px;
   }
 
+  nav {
+    justify-content: center;
+  }
+
+  nav a:nth-of-type(1) li {
+    margin-left: 0;
+  }
+
   #hero {
     text-align: center;
     align-items: center;
-    padding: none;
+    padding: 20px;
     transition: 1000ms;
   }
 
@@ -171,5 +183,11 @@ nav li {
 @media screen and (max-width: 576px) {
   body {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 438px) {
+  body {
+    font-size: 9px;
   }
 }
