--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: raleway, sans-serif;
+  font-family: lato, sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -12,18 +12,20 @@ body {
   background: rgb(57, 57, 57);
   color: #fff;
   width: 100%;
-  height: 300vh;
   overflow-x: hidden;
+  line-height: 1.5;
 }
 
 .container {
   width: 100%;
   max-width: 1090px;
   height: 100%;
+  padding: 40px;
   margin: 0 auto;
 }
 
 .row {
+  height: 100%;
   display: flex;
 }
 
@@ -31,12 +33,32 @@ body {
   width: calc(100% / 12 * 12);
 }
 
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
 h1 {
   font-size: 4.5em;
+  line-height: 1em;
+  font-family: raleway, sans-serif;
+}
+
+h2 {
+  font-size: 24px;
+  margin: 28px 0;
+}
+
+p {
+  letter-spacing: 0.05em;
+  font-size: 16px;
+  margin: 8px 0;
 }
 
 h1 ~ p {
+  line-height: 1em;
+  font-family: raleway, sans-serif;
   font-size: 4em;
+  margin: 0;
   color: rgb(211, 207, 207);
 }
 
@@ -46,9 +68,28 @@ a {
   cursor: pointer;
 }
 
-a:hover {
+a:hover,
+nav a:active {
   color: rgb(5, 194, 201);
   transition: 700ms;
+}
+
+.hr-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+hr {
+  width: 80%;
+  margin-top: 15px;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.75),
+    rgba(218, 218, 218, 0)
+  );
 }
 
 span.john {
@@ -68,6 +109,11 @@ nav {
   top: 0;
   box-shadow: 0px 1px 5px #252932;
 }
+
+nav .row {
+  height: 18.67px;
+}
+
 nav ul {
   display: flex;
   list-style-type: none;
@@ -76,6 +122,8 @@ nav ul {
 nav li {
   margin-left: 35px;
   font-size: 1rem;
+  line-height: 1em;
+  font-family: raleway, sans-serif;
 }
 
 .gradient {
@@ -114,6 +162,7 @@ nav li {
   text-shadow: 1px 1px 5px rgb(41, 39, 39), -1px -1px 5px rgb(41, 39, 39),
     2px 2px 10px rgb(41, 39, 39), -2px 2px -10px rgb(41, 39, 39);
   padding: 50px;
+  position: relative;
   transition: 1000s;
 }
 
@@ -146,6 +195,47 @@ nav li {
   margin-left: 20px;
 }
 
+/* About */
+.about-col1 {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+}
+
+/* Skills */
+#skills ul {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  list-style-type: none;
+  margin-top: 15px;
+  transition: 1000ms;
+}
+
+#skills li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 16px 0;
+}
+
+#skills li i {
+  font-size: 4.5em;
+}
+
+/* Footer */
+.footer-col1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 0;
+}
+
+#footer p {
+  font-size: 12px;
+}
+
 @media screen and (max-width: 768px) {
   body {
     font-size: 14px;
@@ -163,6 +253,7 @@ nav li {
     text-align: center;
     align-items: center;
     padding: 20px;
+    overflow-y: hidden;
     transition: 1000ms;
   }
 
@@ -178,16 +269,45 @@ nav li {
   .social-links-wrapper a:nth-of-type(1) {
     margin-left: 0;
   }
+
+  #skills ul {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    transition: 1000ms;
+  }
 }
 
 @media screen and (max-width: 576px) {
   body {
     font-size: 12px;
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  #about .col-8 {
+    width: calc(100% / 12 * 12);
+  }
+
+  #skills ul {
+    grid-template-columns: 1fr 1fr 1fr;
+    transition: 1000ms;
   }
 }
 
 @media screen and (max-width: 438px) {
   body {
     font-size: 9px;
+  }
+}
+
+@media screen and (max-height: 365px) {
+  #home {
+    height: 365px;
   }
 }
