--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -390,9 +390,15 @@ nav li {
 /* Footer */
 .footer-col1 {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 5px 0;
+}
+
+#footer a {
+  with: 120px;
+  height: 20px;
 }
 
 #footer p {
