--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: lato, sans-serif;
   scroll-behavior: smooth;
@@ -26,6 +28,8 @@ body {
 
 .row {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -71,17 +75,25 @@ a {
   text-decoration: none;
   color: inherit;
   cursor: pointer;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
   transition: 300ms;
 }
 
 a:hover,
 nav a:active {
   color: rgb(5, 194, 201);
+  -webkit-transition: 700ms;
+  -o-transition: 700ms;
   transition: 700ms;
 }
 
 .hr-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -90,6 +102,20 @@ hr {
   margin-top: 15px;
   border: 0;
   height: 1px;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 255, 255, 0)),
+    color-stop(rgba(255, 255, 255, 0.75)),
+    to(rgba(218, 218, 218, 0))
+  );
+  background-image: -o-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.75),
+    rgba(218, 218, 218, 0)
+  );
   background-image: linear-gradient(
     to right,
     rgba(255, 255, 255, 0),
@@ -105,14 +131,22 @@ span.john {
 
 /* Navbar */
 nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background: #252932;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 50px;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  -webkit-box-shadow: 0px 1px 5px #252932;
   box-shadow: 0px 1px 5px #252932;
   z-index: 3;
 }
@@ -122,6 +156,8 @@ nav .row {
 }
 
 nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
 }
@@ -134,7 +170,15 @@ nav li {
 }
 
 .gradient {
+  -webkit-animation: gradientMove 10s ease infinite;
   animation: gradientMove 10s ease infinite;
+  background: -o-linear-gradient(
+    40deg,
+    #f7a344,
+    #f7a344,
+    rgb(5, 194, 201),
+    rgb(5, 194, 201)
+  );
   background: linear-gradient(
     50deg,
     #f7a344,
@@ -148,6 +192,18 @@ nav li {
   opacity: 0.7;
   position: absolute;
   bottom: 0;
+}
+
+@-webkit-keyframes gradientMove {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
 }
 
 @keyframes gradientMove {
@@ -167,13 +223,22 @@ nav li {
 }
 
 #hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   text-shadow: 1px 1px 5px rgb(41, 39, 39), -1px -1px 5px rgb(41, 39, 39),
     2px 2px 10px rgb(41, 39, 39), -2px 2px -10px rgb(41, 39, 39);
   /* padding: 50px; */
   position: relative;
+  -webkit-transition: 1000s;
+  -o-transition: 1000s;
   transition: 1000s;
 }
 
@@ -190,6 +255,8 @@ nav li {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
+  -webkit-transition: 1000ms;
+  -o-transition: 1000ms;
   transition: 1000ms;
 }
 
@@ -198,6 +265,7 @@ nav li {
 }
 
 .social-links-wrapper {
+  -ms-flex-item-align: end;
   align-self: flex-end;
   position: absolute;
   bottom: 25px;
@@ -208,14 +276,34 @@ nav li {
 }
 
 .arrow {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
   position: absolute;
   bottom: 25px;
 }
 .bounce {
-  -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
   animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
 }
 
 @keyframes bounce {
@@ -224,20 +312,30 @@ nav li {
   50%,
   80%,
   100% {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
   40% {
+    -webkit-transform: translateY(-30px);
     transform: translateY(-30px);
   }
   60% {
+    -webkit-transform: translateY(-15px);
     transform: translateY(-15px);
   }
 }
 
 /* About */
 .about-col1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
   flex-flow: column wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -248,17 +346,49 @@ nav li {
 
 /* Skills */
 #skills ul {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: auto;
   grid-template-rows: auto;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   list-style-type: none;
   margin-top: 20px;
+  -webkit-transition: 1000ms;
+  -o-transition: 1000ms;
   transition: 1000ms;
+}
+#skills ul > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+#skills ul > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+#skills ul > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+#skills ul > *:nth-child(4) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+}
+#skills ul > *:nth-child(5) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
 }
 
 #skills li {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 16px 0;
 }
@@ -269,24 +399,44 @@ nav li {
 
 /* Projects */
 #projects ul {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: auto;
   grid-template-rows: auto;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -webkit-transition: 1000ms;
+  -o-transition: 1000ms;
   transition: 1000ms;
+}
+#projects ul > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+#projects ul > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
 }
 
 #projects img {
   height: auto;
   max-width: 100%;
   vertical-align: middle;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
 }
 
 #projects .icons-wrapper {
   position: absolute;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
   transform: scale(0);
+  -ms-flex-wrap: no-wrap;
   flex-wrap: no-wrap;
   opacity: 0;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
 }
 
@@ -297,24 +447,35 @@ nav li {
   height: 100%;
   z-index: 2;
   opacity: 0;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
 }
 
 #projects .bg-hover:hover,
 #projects .card_image:hover .bg-hover {
   opacity: 0.3;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
 }
 
 #projects .card_image:hover img {
   opacity: 0.3;
+  -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
 }
 
 #projects .card_image:hover .icons-wrapper {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
   transform: scale(1);
   opacity: 1;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   z-index: 2;
 }
@@ -334,21 +495,35 @@ nav li {
 }
 
 .cards_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 1rem;
 }
 
 .card {
   border-radius: 6px;
+  -webkit-box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   overflow: hidden;
 }
 
 .card_image {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: relative;
 }
@@ -366,7 +541,11 @@ nav li {
 }
 
 .button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -381,6 +560,8 @@ nav li {
 }
 
 #projects .button-wrapper a div:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   border-radius: 0;
   background: rgb(5, 194, 201);
@@ -389,9 +570,18 @@ nav li {
 
 /* Footer */
 .footer-col1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 5px 0;
 }
@@ -411,6 +601,8 @@ nav li {
   }
 
   nav {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 
@@ -420,9 +612,13 @@ nav li {
 
   #hero {
     text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 20px;
     overflow-y: hidden;
+    -webkit-transition: 1000ms;
+    -o-transition: 1000ms;
     transition: 1000ms;
   }
 
@@ -439,6 +635,8 @@ nav li {
   }
 
   .social-links-wrapper {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
     font-size: 24px;
   }
@@ -448,12 +646,18 @@ nav li {
   }
 
   #skills ul {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    -webkit-transition: 1000ms;
+    -o-transition: 1000ms;
     transition: 1000ms;
   }
 
   #projects ul {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    -webkit-transition: 1000ms;
+    -o-transition: 1000ms;
     transition: 1000ms;
   }
 }
@@ -463,33 +667,33 @@ nav li {
     line-height: 1.2;
   }
 
+  .container {
+    margin: 0;
+    padding: 0 20px;
+  }
+
   #home {
     font-size: 12px;
   }
 
-  /* h2 {
-    font-size: 20px;
-  } */
-
   h3 {
     font-size: 18px;
   }
-
-  /* p {
-    font-size: 12px;
-  } */
 
   #about .col-8 {
     width: calc(100% / 12 * 12);
   }
 
   #skills ul {
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
+    -webkit-transition: 1000ms;
+    -o-transition: 1000ms;
     transition: 1000ms;
   }
 
-  #projects .card_content p {
-    font-size: 12px;
+  li.cards_item {
+    padding: 14px 0;
   }
 }
 
